온보딩 사전과제 제출

--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,7 @@
+### (2) TCP 와 UDP 의 차이를 작성해주세요.
+- TCP 는 송신자와 수신자가 통신을 맺고 끊는 과정에서 확인 과정을 거칩니다. 확인 절차로 인해 신뢰성을 보장하지만 UDP에 바해 전송 속도가 느립니다.   
+따라서 신뢰성이 중요한 서비스에서 주로 사용합니다.
 
+- UDP는 송신자가 전송한 데이터를 전송할뿐  확인하는 절차를 거치지 않습니다.
+확인 절차사 생각되었으므로 TCP보다 전송 속도가 빠르지만 신뢰성을 보장해주지 않습니다.   
+따라서 스트리밍과 같이 연속성이 중요한 서비스에 주로 사용됩니다.
