--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,1 +1,4 @@
-
+(4) 본인이 주력으로 사용하는 언어에서 설계적 결함 한 가지를 작성해주세요.    
+- 자바스크립트의 == 연산자 사용시 비교전 두값을 같은 타입으로 만들어 주는 형변환을 합니다. 
+<img src= "https://z-images.s3.amazonaws.com/5/54/JavaScript_3.png">
+때문에  [] 와 "0" 과 "\t" 는  0과 같다고 인지하나  서로는 같지 않다고 해석합니다. 때문에 다른 언어들처럼 == 으로 비교하기보다는 === 연산자를 사용하여 비교하는것을 권장하고 있습니다. 
