--- a/5번 문제.md
+++ b/5번 문제.md
@@ -1,1 +1,10 @@
+(5) 본인이 주력으로 사용하는 언어에서 자료구조와 관련 된 클래스가 내부적으로 어떻게 동작하는지 한 가지 사례를 정하여 작성해주세요. ex) ArrayList, HashMap 등등   
+   
+<img src = "https://t1.daumcdn.net/cfile/tistory/99EBB44C5B3A39FC0A">
+자바의 ArrayList 는 선형자료구조인 List 인터페이스를 상속핟아 구현되어있습니다.
+
+ArrayList는 객체생성시 매개변수로 공간의 크기를 정해줄수 있습니다.   
+
+매개변수로 받은 크키만큼의 배열 공간을 할당합니다.   
+
 
