fix - 저장되지 않은 파일 수정

--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,2 +1,2 @@
 ### (1) 동시에 같은 DB Table row 를 업데이트 하는 상황을 방어하기 위해 어떻게 개발하실 건지 설명해주세요.
-- 트랜젝션
+- 필요한 작업 단위를 트랜잭션으로 묶어준다음 쉐어 락을 걸어주어 읽기요청은 접근이 가능하도록 하지만 쓰기요청에 대해서는  먼저 요청한 트랜젝션이 종료가 되었을떄 다음 요청이 처리될수 있도록 설정해 줄것입니다.
