--- a/2번 문제.md
+++ b/2번 문제.md
@@ -4,4 +4,4 @@
 
 - UDP는 송신자가 전송한 데이터를 전송할뿐  확인하는 절차를 거치지 않습니다.
 확인 절차사 생각되었으므로 TCP보다 전송 속도가 빠르지만 신뢰성을 보장해주지 않습니다.   
-따라서 스트리밍과 같이 연속성이 중요한 서비스에 주로 사용됩니다.
+따라서 스트리밍과 같이 연속성이 중요한 서비스에 주로 사용합니다.
