--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,2 +1,8 @@
 (3) 웹 브라우저에 네이버 를 검색하고 화면에 네이버 화면이 출력이 될 때 까지 내부적으로 어떤 동작들이 수행이 되는지 설명해주세요.
-- 브라우저 -> dns -> 라우터..
+1. 브라우저에 입력된 url  이 hosts 파일에 등록이 되어있는지, 캐시에 등록이 되어있는지 확인후 등록이 되어있다면 등록된 ip로 요청을 보냅니다.
+2. hosts파일이나 캐시에 url에 해당하는 정보가 없을시 DNS 로부터 ip주소를 받아옵니다.
+3. 라우터의 라우팅을 통해 ip에 해당하는 네트워크 경로를 이동합니다.
+4. 서버 게이트웨이 에서 요청을 받습니다.
+5. http 요청에 해당하는 응답을 보내어 줍니다.
+6. 라우터의 라우팅을 통해서 브라우저의 네트워크 경로를 이동합니다.
+7. http응답을 브라우저는 html css js를 구문분석하여 브라우저 화면에 그려 줍니다.
