--- a/5번 문제.md
+++ b/5번 문제.md
@@ -3,8 +3,11 @@
 <img src = "https://t1.daumcdn.net/cfile/tistory/99EBB44C5B3A39FC0A">
 자바의 ArrayList 는 선형자료구조인 List 인터페이스를 상속핟아 구현되어있습니다.
 
-ArrayList는 객체생성시 매개변수로 공간의 크기를 정해줄수 있습니다.   
+ArrayList는 객체생성시 매개변수로 공간의 크기를 정해줄수 있으며.
+매개변수로 받은 크키 만큼의 배열 공간을 할당합니다.
 
-매개변수로 받은 크키만큼의 배열 공간을 할당합니다.   
+add() 메소드를 통해 값을 대입하며 할당된 공간이 다 찼을시 
 
+(기존의 할당된 크기 * 1.5)  만큼의 공간을 새로 할당하고 기존의 값을 복사 하여 배열 공간을 증가 시켜줍니다.
 
+위와같이 지정한 값을 초과하여 값을 대입할시 재할당이 일어나며, 재할당시 공간 할당과 복사 과정이 이루어지기때문에 효율이 떨어집니다. 따러서 ArrayList를 사용시 서비스의 규모와 목적에따라 적절한 초기값을 정하여 재할당이 빈번히 일어나지 않도록 주의하여 사용해야 합니다.
