--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,4 +1,4 @@
 (4) 본인이 주력으로 사용하는 언어에서 설계적 결함 한 가지를 작성해주세요.    
-- 자바스크립트의 == 연산자 사용시 값을 비교하기 전 두 값을 같은 타입으로 만들어 주는 형변환을 합니다. 
+- 자바스크립트의 == 연산자는 값을 비교하기 전 두 값을 같은 타입으로 자동 형변환을 해줍니다. 
 <img src= "https://z-images.s3.amazonaws.com/5/54/JavaScript_3.png">
-때문에 == 연산자를 사용할시 위와같이 [] 와 "0" 과 "\t" 는  0과 같다고 판정하지만 서로는 같지 않다고 판정하는 문제가 발생합니다. 때문에 == 연산자로 비교하기보다는 === 연산자를 사용하여 비교하는것을 권장하고 있습니다.
+때문에 위의 그림과 같이 == 연산자를 사용할시 [] 와 "0" 과 "\t" 는  0과 같다고 판정하지만 서로는 같지 않다고 판정하는 문제가 발생합니다. 때문에 == 연산자로 비교하기보다는 === 연산자를 사용하여 비교하는것을 권장하고 있습니다.
